[gd_scene load_steps=2 format=3 uid="uid://bnllwfc06vsae"]

[ext_resource type="Script" path="res://addons/repl/control.gd" id="1_33vy6"]

[node name="Control" type="Control"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_33vy6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="OutputRichLabel" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
focus_mode = 2
bbcode_enabled = true
context_menu_enabled = true
selection_enabled = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="InputLineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="EvalButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Evaluate"

[node name="PathButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "File"

[node name="PathFileDialog" type="FileDialog" parent="."]
title = "Open a File or Directory"
size = Vector2i(392, 159)
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 3

[connection signal="gui_input" from="VBoxContainer/HBoxContainer/InputLineEdit" to="." method="_on_input_line_edit_gui_input"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/EvalButton" to="." method="_on_eval_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/PathButton" to="." method="_on_path_button_pressed"]
[connection signal="dir_selected" from="PathFileDialog" to="." method="_on_path_file_dialog_dir_selected"]
[connection signal="file_selected" from="PathFileDialog" to="." method="_on_path_file_dialog_file_selected"]
